tests/functional/lang/parse-fail-undef-var-2.err.exp
error: syntax error, expecting '}'
       at /pwd/parse-fail-undef-var-2.nix:3:13:
            2|
            3|   f = {x, y : ["baz" "bar" z "bat"]}: x + y;
             |             ^
            4|
